--- a/_config.yml
+++ b/_config.yml
@@ -1,187 +1,149 @@
-# The Site Configuration
+# Site Configuration for Jekyll with Chirpy theme
 
-# Import the theme
+# Import the theme (mandatory)
 theme: jekyll-theme-chirpy
 
-# The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
-# If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
-# otherwise, the layout language will use the default value of 'en'.
+# Language for the site (use language codes, e.g. 'en' for English)
 lang: en
 
-# Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
+# Timezone for date/time display, use tz database names
 timezone: America/New_York
 
-# jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
-# ↓ --------------------------
-
-title: Tims Homelabs # the main title
-
-tagline: Creating, breaking, and fixing my homelabs one step at a time. # it will display as the subtitle
-
-description: >- # used by seo meta and the atom feed
+# Main site info for SEO and display
+title: Tims Homelabs # Main title of your site
+tagline: Creating, breaking, and fixing my homelabs one step at a time. # Subtitle
+description: >- # Used for SEO meta and RSS feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
-# Fill in the protocol & hostname for your site.
-# E.g. 'https://username.github.io', note that it does not end with a '/'.
+# Your site URL (no trailing slash)
 url: "https://www.timsmithh23.github.io"
 
+# GitHub username (used by Chirpy for links, etc)
 github:
-  username: timsmithh23 # change to your GitHub username
+  username: timsmithh23
 
-#twitter:
-#  username: twitter_username # change to your Twitter username
-
-social: Tim Smith
-  # Change to your full name.
-  # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Tim Smith
-  email: tim.smithh23@gmail.com # change to your email address
+# Social info about the author/site owner
+social:
+  name: Tim Smith # Your full name
+  email: tim.smithh23@gmail.com # Your contact email
   links:
-    # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/timsmithh23 # change to your GitHub homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://twitter.com/username # Replace with your Twitter URL
+    - https://github.com/timsmithh23 # Your GitHub URL
+    # Add more links by adding more lines here
 
-# Site Verification Settings
+# Site verification codes (optional, fill if you use these services)
 webmaster_verifications:
-  google: # fill in your Google verification code
-  bing: # fill in your Bing verification code
-  alexa: # fill in your Alexa verification code
-  yandex: # fill in your Yandex verification code
-  baidu: # fill in your Baidu verification code
-  facebook: # fill in your Facebook verification code
+  google: 
+  bing:
+  alexa:
+  yandex:
+  baidu:
+  facebook:
 
-# ↑ --------------------------
-# The end of `jekyll-seo-tag` settings
-
-# Web Analytics Settings
+# Analytics tracking IDs (optional, fill if you use these services)
 analytics:
   google:
-    id: # fill in your Google Analytics ID
+    id: 
   goatcounter:
-    id: # fill in your GoatCounter ID
+    id: 
   umami:
-    id: # fill in your Umami ID
-    domain: # fill in your Umami domain
+    id: 
+    domain: 
   matomo:
-    id: # fill in your Matomo ID
-    domain: # fill in your Matomo domain
+    id: 
+    domain: 
   cloudflare:
-    id: # fill in your Cloudflare Web Analytics token
+    id: 
   fathom:
-    id: # fill in your Fathom Site ID
+    id: 
 
-# Page views settings
+# Page views provider (only supports 'goatcounter' for now)
 pageviews:
-  provider: # now only supports 'goatcounter'
+  provider:
 
-# Prefer color scheme setting.
-#
-# Note: Keep empty will follow the system prefer color by default,
-# and there will be a toggle to switch the theme between dark and light
-# on the bottom left of the sidebar.
-#
-# Available options:
-#
-#     light — Use the light color scheme
-#     dark — Use the dark color scheme
-#
-theme_mode: # [light | dark]
+# Default color scheme of the site ('light', 'dark', or empty for system default)
+theme_mode:
 
-# The CDN endpoint for media resources.
-# Notice that once it is assigned, the CDN url
-# will be added to all media resources (site avatar, posts' images, audio and video files) paths starting with '/'
-#
-# e.g. 'https://cdn.com'
+# CDN URL for media resources, e.g. avatar or images (optional)
 cdn:
 
-# the avatar on sidebar, support local or CORS resources
+# Sidebar avatar image URL or local path (optional)
 avatar:
 
-# The URL of the site-wide social preview image used in SEO `og:image` meta tag.
-# It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+# Social preview image URL (for SEO OpenGraph, optional)
+social_preview_image:
 
-# boolean type, the global switch for TOC in posts.
+# Enable or disable Table of Contents in posts
 toc: true
 
+# Comments system config (choose one and fill it if you want comments)
 comments:
-  # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: # [disqus | utterances | giscus]
-  # The provider options are as follows:
+  provider:
   disqus:
-    shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
-  # utterances settings › https://utteranc.es/
+    shortname:
   utterances:
-    repo: # <gh-username>/<repo>
-    issue_term: # < url | pathname | title | ...>
-  # Giscus options › https://giscus.app
+    repo:
+    issue_term:
   giscus:
-    repo: # <gh-username>/<repo>
+    repo:
     repo_id:
     category:
     category_id:
-    mapping: # optional, default to 'pathname'
-    strict: # optional, default to '0'
-    input_position: # optional, default to 'bottom'
-    lang: # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
+    mapping:
+    strict:
+    input_position:
+    lang:
+    reactions_enabled:
 
-# Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
+# Custom CSS asset file path (relative to /assets/css/)
 assets: /assets/css/custom.css
 
-  self_host:
-    enabled: # boolean, keep empty means false
-    # specify the Jekyll environment, empty means both
-    # only works if `assets.self_host.enabled` is 'true'
-    env: # [development | production]
+# Self-hosted static assets options (advanced)
+self_host:
+  enabled: false
+  env:
 
+# Progressive Web App (PWA) options
 pwa:
-  enabled: true # The option for PWA feature (installable)
+  enabled: true # Allow installable PWA
   cache:
-    enabled: true # The option for PWA offline cache
-    # Paths defined here will be excluded from the PWA cache.
-    # Usually its value is the `baseurl` of another website that
-    # shares the same domain name as the current website.
+    enabled: true # Enable offline caching
     deny_paths:
-      # - "/example"  # URLs match `<SITE_URL>/example/*` will not be cached by the PWA
+      # - "/example" # Paths to exclude from cache
 
+# Number of posts per page on pagination
 paginate: 10
 
-# The base URL of your site
+# Base URL if your site is hosted under a subdirectory (usually blank for github.io)
 baseurl: ""
 
-# ------------ The following options are not recommended to be modified ------------------
-
+# Markdown parser and syntax highlighter settings
 kramdown:
   footnote_backlink: "&#8617;&#xfe0e;"
   syntax_highlighter: rouge
-  syntax_highlighter_opts: # Rouge Options › https://github.com/jneen/rouge#full-options
+  syntax_highlighter_opts:
     css_class: highlight
-    # default_lang: console
     span:
       line_numbers: false
     block:
       line_numbers: true
       start_line: 1
 
+# Collections configuration (for tabs or other custom content types)
 collections:
   tabs:
     output: true
     sort_by: order
 
+# Default front-matter values for posts, drafts, and tabs
 defaults:
   - scope:
-      path: "" # An empty string here means all files in the project
+      path: ""
       type: posts
     values:
       layout: post
-      comments: true # Enable comments in posts.
-      toc: true # Display TOC column in posts.
-      # DO NOT modify the following parameter unless you are confident enough
-      # to update the code of all other post links in this project.
+      comments: true
+      toc: true
       permalink: /posts/:title/
   - scope:
       path: _drafts
@@ -189,14 +151,16 @@ defaults:
       comments: false
   - scope:
       path: ""
-      type: tabs # see `site.collections`
+      type: tabs
     values:
       layout: page
       permalink: /:title/
 
+# CSS compression style
 sass:
   style: compressed
 
+# HTML compression settings
 compress_html:
   clippings: all
   comments: all
@@ -206,6 +170,7 @@ compress_html:
   ignore:
     envs: [development]
 
+# Files or folders to exclude from build
 exclude:
   - "*.gem"
   - "*.gemspec"
@@ -217,6 +182,7 @@ exclude:
   - "*.config.js"
   - "package*.json"
 
+# Jekyll Archives plugin settings for categories and tags
 jekyll-archives:
   enabled: [categories, tags]
   layouts:
