--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ timezone: America/New_York
 
 # Main site info for SEO and display
 title: Tims Homelabs # Main title of your site
-tagline: Creating, breaking, and fixing my homelabs one step at a time. # Subtitle
+tagline: WEBSITE IN PROGRESS. Some links may or may not be broken! # Subtitle
 description: >- # Used for SEO meta and RSS feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
